# django4jenkins

./: .gitignore  pyproject.toml
django4jenkins/: README.md  db.sqlite3  manage.py  start.py
django4jenkins/django4jenkins/: asgi.py  settings.py  urls.py  wsgi.py
