[tool.poetry]
name = "django4jenkins"
version = "0.1.0"
description = ""
authors = ["Bruno-Hermans <124162463+Bruno-Hermans@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
